--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "json": "json-server data.json -p 3500"
+    "json": "node server.js"
   },
   "private": true,
   "dependencies": {
@@ -30,7 +30,7 @@
     "@angular/compiler-cli": "^18.2.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.2.0",
-    "json-server": "^1.0.0-beta.3",
+    "json-server": "^0.17.4",
     "jsonwebtoken": "^9.0.2",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
